force-app/main/default/objects/FACT_Issue_Detail__c/FACT_Issue_Detail__c.object-meta.xml
<CustomObject>
    <label>Work Order Detail</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Work Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>