force-app/main/default/objects/FACT_Issue_Detail__c/fields/FACT_Case__c.field-meta.xml
<CustomField>
    <fullName>FACT_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for storing parent case value.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Work Order Details</relationshipLabel>
    <relationshipName>Issue_Details</relationshipName>
    <type>Lookup</type>
</CustomField>