force-app/main/default/objects/FACT_Issue_Detail__c/fields/FACT_Work_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>FACT_Work_Order_Details__c</fullName>
    <description>Field for storing Work Order Reference Detail value.</description>
    <inlineHelpText>Work Order or Project details</inlineHelpText>
    <label>Work Order Reference Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>