force-app/main/default/objects/FACT_Issue_Detail__c/fields/FACT_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Work_Order_Number__c</fullName>
    <description>field for storing Work Order Reference value.</description>
    <inlineHelpText>Work Order number or Project number</inlineHelpText>
    <label>Work Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>